--- a/styles.css
+++ b/styles.css
@@ -6,7 +6,7 @@ max-height: 700px;
 max-width: 1920px;
 border-radius: 0px;
 background-color: #B4DADC;
-background-image: url("/img/hippo_PNG2.png");
+background-image: url("hippo_PNG2.png");
 background-repeat: no-repeat;
 }
 .container{
